--- a/LaTeX/Masterarbeit.tex
+++ b/LaTeX/Masterarbeit.tex
@@ -2,6 +2,7 @@
 
 \begin{document}
 \renewcommand{\figurename}{Figure}
+\renewcommand{\contentsname}{Table of Contents}
 \pagenumbering{Roman}
 
 \include{deckblatt}
