--- a/LaTeX/deckblatt.tex
+++ b/LaTeX/deckblatt.tex
@@ -29,7 +29,7 @@ Univ.-Prof. Dr. Tim C. Lüth
 \end{center}
 \vspace{0.70 cm}
 \begin{center}
-{\Large Investigation of the Coloring Behavior of Zirconiumdioxide (ZrO2) Dental Ceramics by Ink-jet Printing of Metal-ionic Inks}
+{\Large Investigation of the Coloring Behavior of Zirconiumdioxide ($ZrO_2$) Dental Ceramics by Ink-jet Printing of Metal-ionic Inks}
 \end{center}
 \vspace{0.70 cm}
 \begin{center}
@@ -51,6 +51,6 @@ Supervisor: & Dipl.-Ing. Dominik Rumschöttel \nl
 
 Issued on: & 01.10.2017 \nl
 
-Submitted on: & 31.03.2018 \nl
+Submitted on: & 29.03.2018 \nl
 \end{tabular}
 \end{textblock*}
