--- a/LaTeX/einleitung.tex
+++ b/LaTeX/einleitung.tex
@@ -9,7 +9,7 @@
 
 \chapter{Introduction}
 \label{sec:problemstellung}
- Only in Germany more than 1 Million teeth are replaced annually. The replacement procedure is accomplished with an implantation of the tooth replica to provide the aesthetics and the function of the natural tooth. Ancient Egyptians used tooth shaped ivory to regain the function of the missing teeth. Today the technology has evolved to a point where the dental replacement for a single tooth is an assembly of three parts, which  are to be seen in Figure 1.1. The implant is the part which is screwed to the lower jaw bone (mandible) and anchors the whole replacement assembly to the chin. The preferred material used for the implant are titanium in the EU and tantalum in the US. The enhanced osseointegration of the porous implant material surface, biocompatibility of the ceramic interface, formed due to the surface oxidation a Young's Modulus, which is similar to the human bone are the main reasons for titanium and tantalum to be the prime materials for this purpose. The abutment takes on the task of a fitting  for the crown and is made of the same material as the implant.
+ Only in Germany more than 1 Million teeth are replaced annually. The replacement procedure is accomplished with an implantation of the tooth replica to provide the aesthetics and the function of the natural tooth. Ancient Egyptians used tooth shaped ivory to regain the function of the missing teeth. Today the technology has evolved to a point where the dental replacement for a single tooth is an assembly of three parts, which  are to be seen in Figure 1.1. The implant is the part which is screwed to the lower jaw bone (mandible) and anchors the whole replacement assembly to the chin. The preferred materials used for the implant are titanium in the EU and tantalum in the US. The enhanced osseointegration of the porous implant material surface, biocompatibility of the ceramic interface,which is formed due to the surface oxidation a Young's Modulus, which is similar to the human bone are the main reasons for titanium and tantalum to be the prime materials for this purpose. The abutment takes on the task of a fitting  for the crown and is made of the same material as the implant.
   \begin{figure}[h]
  	\centering
  	\includegraphics[width=0.4\textwidth]{grafiken/implant.png}
@@ -17,7 +17,7 @@
  	\label{fig:implant}
  \end{figure} 
  
- The crown of the tooth replacement is the part which imitates the visual qualities of the tooth. There are several material, which a crown can be made of or assembled from. The most popular crown material dominating the market is the Yttria-stabilized zirconia (YSZ), which has a cubic fluorite crystal structure and is going to be referred as zirconia in the frame of this thesis. However, zirconia in its pure form is a plain white material with high translucency. In case of single tooth replacement  the newle implanted crown would be absurdly white when compared to the neighboring teeth.Even when a full chin dental replacement is conducted, it is abnormal to have a full set of plain white teeth without any shading. This situation makes it a necessity to preprocess the crowns to match the neighboring teeth or another natural shade of choice in case of a fully monolithic replacement. Dentist are using a shade guide seen in the figure \ref{fig:shadeguide} for a side-by-side comparison to determine the color and the shade of the teeth. One can observe that there are 4 color groups A, B, C and D which are referred as orange-brown, yellow, grey-brown and red respectively \citep{vita}. Each of these colors have shades ranging from 1 to 4. Even though the shades are coded with the numbers from 1 to 4 with increments of 0.5 a total analogue shade acquisition is possible. The number 1 represents the shade with the least and 4 with the most saturated tone for each color.
+ The crown of the tooth replacement is the part which imitates the visual qualities of the tooth. There are several materials, which a crown can be made of or assembled from. The most popular crown material dominating the market is the Yttria-stabilized zirconia (YSZ), which has a cubic fluorite crystal structure and is going to be referred as zirconia in the frame of this thesis. However, zirconia in its pure form is a plain white material with high translucency. In case of single tooth replacement the newly implanted crown would be absurdly white when compared to the neighboring teeth. Even when a full chin dental replacement is conducted, it is abnormal to have a full set of plain white teeth without any shading. This situation makes it a necessity to preprocess the crowns to match the neighboring teeth or another natural shade of choice in case of a fully monolithic replacement. Dentist are using a shade guide seen in the figure \ref{fig:shadeguide} for a side-by-side comparison to determine the color and the shade of the teeth. One can observe that there are 4 color groups A, B, C and D which are referred as orange-brown, yellow, grey-brown and red respectively \citep{vita}. Each of these colors have shades ranging from 1 to 4. Even though the shades are coded with the numbers from 1 to 4 with increments of 0.5 a total analogue shade acquisition is possible. The number 1 represents the shade with the least and 4 with the most saturated tone for each color.
  \newline
  \begin{figure}[h]
  	\centering
@@ -55,9 +55,9 @@ t_{in}=\kappa \cdotp {\frac{\mu \cdotp r{_0}^{1.85}}{\sigma \cos({\theta})\varPh
 \newline
 $t_{in}$ defines the infiltration time and depends on the parameters $\kappa$ , which is the permeability constant of the medium and $\mu$ the kinematic viscosity of the fluid. The initial drop radius is symbolized by $r_{0}$. $\theta$ stands for the initial contact angle after the impact of the droplet on the surface. The $\sigma$ in the denominator is the surface tension of the liquid. The higher the surface tension is the harder it is for the liquid to wet the surface of the material because of the increased contact angle and hardened impregnation capability. The last dependency of the infiltration time is  the $\phi$ constant for the material, identifying the porosity level of the material. \citep{markicevic2009infiltration}
 
-Stratov et al. have provided experimental results regarding  the spreading phases of silicon oil droplets utilizing capillary forces over different permeable layers and observing the diameters of the droplets and wetted areas over time. They have divided the depletion into two phases, of which the first one is defined by the time to reach the maximum diameter for the drop base and the second one is identified by the reduction of the drop base while the depletion takes place. The findings of the experiments show that the different oils on the different porous material with similar porosity and mean pore dimensions. showed similar spreading characteristics on a different time scale and the contact angle remained constant throughout the second stage.\citep{starov2002thick}
+Stratov et al. have provided experimental results regarding  the spreading phases of silicon oil droplets utilizing capillary forces over different permeable layers and observing the diameters of the droplets and wetted areas over time. They have divided the depletion into two phases, of which the first one is defined by the time to reach the maximum diameter for the drop base and the second one is identified by the reduction of the drop base while the depletion takes place. The findings of the experiments show that the different oils on the different porous materials with similar porosity and mean pore dimensions. showed similar spreading characteristics on a different time scale and the contact angle remained constant throughout the second stage.\citep{starov2002thick}
 
-The dispersion behavior of liquid drops inside porous media which are previously saturated with the identical liquid are examined in the work of Starov et al. The study was conducted considering both theoretical and experimental perspectives. The study was conducted both theoretical and experimental perspectives. The spreading of a liquid on a dry solid medium is governed by a power law and it is shown that the same power law applies to the case with saturated medium. The liquid flow within the porous medium is modeled using the Brinkman’s equations. The effective lubrication and the liquid exchange between the drop and the porous medium are found to have equal significance through which the drop dispersion equation is generated. \citep{starov2002saturated}
+The dispersion behavior of liquid drops inside porous media which are previously saturated with the identical liquid are examined in the work of Starov et al. The study was conducted both theoretical and experimental perspectives. The spreading of a liquid on a dry solid medium is governed by a power law and it is shown that the same power law applies to the case with saturated medium. The liquid flow within the porous medium is modeled using the Brinkman’s equations. The effective lubrication and the liquid exchange between the drop and the porous medium are found to have equal significance through which the drop dispersion equation is generated. \citep{starov2002saturated}
 \newline
 
 \begin{equation} \label{eq:SpreadingDia}
@@ -65,13 +65,13 @@ L=L_0 (1+10(\frac{4}{\pi})^3 \frac{V^3 \gamma}{L_0^{10} \mu}\omega t)^{0.1}
 \end{equation}
 \newline
 
-The formula \ref{eq:SpreadingDia} shows the parameters which define the diameter of the covered spot by a deployed drop on the saturated surface of the porous material. $L_0$ V are the measured initial diameter and volume of the drop. $\omega$ is defined as the effective lubrication coefficient and has to be acquired experimentally for each porous medium and impregnating liquid pair. The t as the last parameter of the equation stands for the time as usual. 
+The formula \ref{eq:SpreadingDia} shows the parameters which define the diameter of the covered spot by a deployed drop on the saturated surface of the porous material. $L_0$ V are the measured initial diameter and volume of the drop. $\omega$ is defined as the effective lubrication coefficient and has to be acquired experimentally for each porous medium and impregnating liquid pair. The t as the last parameter of the equation stands for the time. 
 
-According to Hapgood et al. the properties of the porous medium, such as its porosity, the size and the orientation of the pores and the chemical properties of the surface affect the impregnation and the dispersion behavior of the drops. The Washburn equation is employed by multiple authors to generate a model. These models are grounded on the existence of cylindrical capillaries lying parallel to each other. The Washburn equation describes the behavior of the drops by stating that the wetting is induced bu capillary pressure while the viscous dissipation of the flow causes resistance to the dissipation.
+According to Hapgood et al. the properties of the porous medium, such as its porosity, the size and the orientation of the pores and the chemical properties of the surface affect the impregnation and the dispersion behavior of the drops. The Washburn equation is employed by multiple authors to generate a model. These models are grounded on the existence of cylindrical capillaries lying parallel to each other. The Washburn equation describes the behavior of the drops by stating that the wetting is induced by capillary pressure while the viscous dissipation of the flow causes resistance to the dissipation.
 
 The amount of time it takes for a drop to diffuse completely in the porous substrate, until there remains no more liquid on the surface is defined as the drop penetration time, also called as the wicking time.
 
-The fact that the parallel capillary pores assumption not being suitable for direct implementation for powder beds brings about a major disadvantage. To overcome this problem, the Kozeny approach, which utilizes an effective pore size nased on the properties of the powder, is widely applied. The 3D velocity components of a Newtonian fluid were measured in the porous medium model under the assumption that the flow is steady, viscous and incompressible. Glass rods with diameters of 3mm were used for building the models of porous media. Two of the velocity components were measured with a laser Doppler anemometer while the  continuity equation is integrated to calculate the third component. The main aim was to observe how the viscous drag, inertial flow field and eddy losses in the porous medium affect the flow. The study revealed a laminar and stable  flow, which brings along the conclusion  that a micromixing of the fluid does not exist. In addition, high values of viscous drag coefficients lead to non-existent inertial flow effects.
+The fact that the parallel capillary pores assumption not being suitable for direct implementation for powder beds brings about a major disadvantage. To overcome this problem, the Kozeny approach, which utilizes an effective pore size based on the properties of the powder, is widely applied. The 3D velocity components of a Newtonian fluid were measured in the porous medium model under the assumption that the flow is steady, viscous and incompressible. Glass rods with diameters of 3mm were used for building the models of porous media. Two of the velocity components were measured with a laser Doppler anemometer while the  continuity equation is integrated to calculate the third component. The main aim was to observe how the viscous drag, inertial flow field and eddy losses in the porous medium affect the flow. The study revealed a laminar and stable  flow, which brings along the conclusion  that a micromixing of the fluid does not exist. In addition, high values of viscous drag coefficients lead to non-existent inertial flow effects.
 
 Although the vertical and lateral velocity fields are observed  to have positive and negative  flow fields, the bulk direction flow fields did not have negative velocity fields. At the top and bottom layers, the vertical flow is found to be absent, based on the fact that the vertical components of the velocities at the top and bottom layers being equal to zero. The fluid advancing in the porous medium via an indirect path should not lead to the  conclusion that there exists a fluid mixing, as it is observed to be absent for the examined range of Reynolds numbers.\citep{hapgood2002drop}
 
@@ -104,7 +104,7 @@ In the Figure \ref{fig:lab_card} you can see a cutout of a lab card showing a se
 	\label{fig:lab_card}
 \end{figure}
 \newline
-The Figure \ref{fig:CrownProcesses} shows the sequential states of the dental crowns after each main process conducted by the dental technologist.First of all, the crowns have to be milled out of cylindrical blank which can provide enough bulk material for about 20 crowns. The milled crowns are colored via variety of brushes using  false colored inks to help the dental technician to visually differentiate the colored regions and the inks from each other, which do not possess their final color and have an extremely low contrast so that it is hard process for the human eye to recognize the borders of the different ink applied areas.
+The Figure \ref{fig:CrownProcesses} shows the sequential states of the dental crowns after each main process conducted by the dental technologist. First of all, the crowns have to be milled out of cylindrical blank which can provide enough bulk material for about 20 crowns. The milled crowns are colored via variety of brushes using  false colored inks to help the dental technician to visually differentiate the colored regions and the inks from each other, which do not possess their final color and have an extremely low contrast so that it is hard process for the human eye to recognize the borders of the different ink applied areas.
 
 
 \begin{figure}[h]
@@ -115,7 +115,7 @@ The Figure \ref{fig:CrownProcesses} shows the sequential states of the dental cr
 \end{figure} 
  
 
-Afterwards te colored dental crowns are sintered for the ceramic to reach its final strength. The false colors of the inks evaporate at temperatures above 1200\textdegree C and the metalionic ink becomes more visible providing the zirconia natural tooth like shade which roots from the depths of the ceramic structure. As a final process the crowns are masked and polished.
+Afterwards te colored dental crowns are sintered for the ceramic to reach its final strength. The false colors of the inks evaporate at temperatures above 1200\textdegree C and the metal-ionic ink becomes more visible providing the zirconia natural tooth like shade which roots from the depths of the ceramic structure. As a final process the crowns are masked and polished.
 
 
 
