--- a/LaTeX/erklaerung.tex
+++ b/LaTeX/erklaerung.tex
@@ -6,6 +6,6 @@
 Ich erkläre hiermit ehrenwörtlich, dass ich die vorliegende Arbeit selbstständig und ohne Benutzung anderer als der angegebenen Hilfsmittel angefertigt habe; die aus fremden Quellen (einschließlich elektronischer Quellen) direkt oder indirekt übernommenen Gedanken sind ausnahmslos als solche kenntlich gemacht.
 % Die Arbeit wurde bisher keiner anderen Prüfungsbehörde vorgelegt.
 \vspace{1cm}\\
-Garching bei München, den 01.07.2017
+Garching bei München, den 29.03.2018
 \vspace{2.5cm}\\
-Vorname Nachname
+Furkan Öztürk
