--- a/LaTeX/vorwort.tex
+++ b/LaTeX/vorwort.tex
@@ -8,6 +8,6 @@ An dieser Stelle möchte ich...
 Ebenso danke ich ....
 
 \vfill
-Garching bei München, Juli 2015
+Garching bei München, March 2018
 
-Vorname Nachname
+Furkan Öztürk
